--- a/DataStructures/DataStructures/DataStructures.csproj
+++ b/DataStructures/DataStructures/DataStructures.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinkedListPlay.cs" />
+    <Compile Include="NodePlay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
