--- a/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
+++ b/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SinglyLinkedListTest.cs" />
+    <Compile Include="StackTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Learning.DataStructures\Learning.DataStructures.csproj">
