--- a/DataStructures/Learning.DataStructures/Learning.DataStructures.csproj
+++ b/DataStructures/Learning.DataStructures/Learning.DataStructures.csproj
@@ -40,9 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ISinglyLinkedList.cs" />
+    <Compile Include="IStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SinglyLinkList.cs" />
     <Compile Include="SinglyLinkListNode.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
