--- a/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
+++ b/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
@@ -50,7 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PostfixCalcTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueTest.cs" />
     <Compile Include="SinglyLinkedListTest.cs" />
     <Compile Include="StackTest.cs" />
   </ItemGroup>
