Added folding bytes hash creator

--- a/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
+++ b/DataStructures/Learning.DataStructures.Test/Learning.DataStructures.Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FoldingBytesHashCreatorTest.cs" />
     <Compile Include="PostfixCalcTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueTest.cs" />
